--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,50 @@
 html {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 19px;
+  font-size: 24px;
   font-weight: normal;
   line-height: 1.25;
 }
 
-/*h1 {
-  font-size: 10rem;
-}*/
+a {
+  color: inherit;
+}
+
+a:hover {
+  opacity: 0.8;
+}
+
+h1 {
+  letter-spacing: -0.02em;
+}
+
+/* Forms */
+
+fieldset {
+  border: none;
+  padding: 0;
+}
+
+label {
+  display: block;
+  padding-bottom: 5px;
+}
+
+input {
+  border: 2px solid black;
+  color: black;
+  font: inherit;
+  padding: 5px;
+}
+
+input:focus {
+  outline: none;
+}
+
+button {
+  background-color: black;
+  border: none;
+  color: white;
+  font: inherit;
+  padding: 7px 10px;
+  margin-left: -7px;
+}
