--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,35 @@
-html {
+/* UNIVERSAL */
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  left: 0;
+  top: 0;
+  font-size: 100%;
+}
+
+/* ROOT FONT STYLES */
+
+* {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 24px;
+  font-size: 19px;
   font-weight: normal;
-  line-height: 1.25;
+  line-height: 1.3;
+}
+
+/* TYPOGRAPHY */
+
+h1, h2 {
+  font-size: 2rem;
+  letter-spacing: -0.01em;
+  margin: 0.5em 0;
 }
 
 a {
+  font: inherit;
   color: inherit;
 }
 
@@ -13,8 +37,47 @@ a:hover {
   opacity: 0.8;
 }
 
-h1 {
-  letter-spacing: -0.02em;
+p {
+  font-size: 16px;
+  margin: 2em 0;
+  line-height: 1.35;
+}
+
+.data-point {
+  display: block;
+  font-size: 10rem;
+  letter-spacing: -0.015em;
+  line-height: 0.875em;
+  font-weight: 300;
+  padding: 0.1em 0 0.15em;
+}
+
+/* Details */
+
+details {
+  margin-bottom: 1em;
+}
+
+details div {
+  margin: 0;
+}
+
+summary {
+  text-decoration: underline;
+}
+
+summary:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+/* Focus states */
+
+input:focus,
+summary:focus,
+button:focus {
+  outline: 3px solid #fff;
+  outline-offset: 0;
 }
 
 /* Forms */
@@ -26,25 +89,224 @@ fieldset {
 
 label {
   display: block;
-  padding-bottom: 5px;
+  font-size: 2rem;
+  letter-spacing: -0.01em;
+  margin: 0.5em 0;
+}
+
+input,
+button {
+  font-family: inherit;
+  font-size: 2rem;
+  letter-spacing: -0.01em;
 }
 
 input {
   border: 2px solid black;
   color: black;
-  font: inherit;
   padding: 5px;
-}
-
-input:focus {
-  outline: none;
+  width: 50%;
 }
 
 button {
   background-color: black;
   border: none;
+  border-radius: 0;
   color: white;
-  font: inherit;
-  padding: 7px 10px;
   margin-left: -7px;
+  padding: 7px 10px;
 }
+
+button:hover {
+  cursor: pointer;
+}
+
+
+/* POSITIONING */
+
+.left {
+  text-align: left;
+}
+
+.right {
+  text-align: right;
+}
+
+.center {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* ==== GRID SYSTEM ==== */
+
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  /*color: #111;
+  background-color: #fff;*/
+}
+
+.container:nth-of-type(2n) {
+  /*color: #fff;
+  background-color: #111;*/
+}
+
+.row {
+  position: relative;
+  width: 100%;
+}
+
+.row [class^="col"] {
+  float: left;
+  margin: 0.5rem 2%;
+  min-height: 0.125rem;
+}
+
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-10,
+.col-11,
+.col-12 {
+  width: 96%;
+}
+
+.col-1-sm {
+  width: 4.33%;
+}
+
+.col-2-sm {
+  width: 12.66%;
+}
+
+.col-3-sm {
+  width: 21%;
+}
+
+.col-4-sm {
+  width: 29.33%;
+}
+
+.col-5-sm {
+  width: 37.66%;
+}
+
+.col-6-sm {
+  width: 46%;
+}
+
+.col-7-sm {
+  width: 54.33%;
+}
+
+.col-8-sm {
+  width: 62.66%;
+}
+
+.col-9-sm {
+  width: 71%;
+}
+
+.col-10-sm {
+  width: 79.33%;
+}
+
+.col-11-sm {
+  width: 87.66%;
+}
+
+.col-12-sm {
+  width: 96%;
+}
+
+.row::after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.hidden-sm {
+  display: none;
+}
+
+@media only screen and (min-width: 33.75em) {  /* 540px */
+  .container {
+    width: 80%;
+  }
+}
+
+@media only screen and (min-width: 45em) {  /* 720px */
+  .col-1 {
+    width: 4.33%;
+  }
+
+  .col-2 {
+    width: 12.66%;
+  }
+
+  .col-3 {
+    width: 21%;
+  }
+
+  .col-4 {
+    width: 29.33%;
+  }
+
+  .col-5 {
+    width: 37.66%;
+  }
+
+  .col-6 {
+    width: 46%;
+  }
+
+  .col-7 {
+    width: 54.33%;
+  }
+
+  .col-8 {
+    width: 62.66%;
+  }
+
+  .col-9 {
+    width: 71%;
+  }
+
+  .col-10 {
+    width: 79.33%;
+  }
+
+  .col-11 {
+    width: 87.66%;
+  }
+
+  .col-12 {
+    width: 96%;
+  }
+
+  .hidden-sm {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 60em) { /* 960px */
+  .container {
+    width: 100%;
+  }
+
+  .row {
+    margin: 0 auto;
+  }
+
+}
+
+
+/* Colours affected by JS */
