--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ p {
 .data-point {
   display: block;
   font-size: 10rem;
-  letter-spacing: -0.015em;
+  letter-spacing: -0.02em;
   font-kerning: normal;
   line-height: 0.875em;
   font-weight: 300;
@@ -79,7 +79,7 @@ summary:hover {
 input:focus,
 summary:focus,
 button:focus {
-  outline: 3px solid #000;
+  outline: 4px solid gold;
   outline-offset: 0;
 }
 
@@ -134,6 +134,7 @@ button:hover {
   width: 50px;
   height: 40px;
   display: none;
+  margin-top: 1em;
 }
 
 .spinner > div {
@@ -180,45 +181,38 @@ button:hover {
   }
 }
 
-/* POSITIONING */
-
-.left {
-  text-align: left;
-}
-
-.right {
-  text-align: right;
-}
-
-.center {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 /* ==== GRID SYSTEM ==== */
 
 .container {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  /*color: #111;
-  background-color: #fff;*/
+  color: #111;
+  background-color: #fff;
 }
 
-.container:nth-of-type(2n) {
-  /*color: #fff;
-  background-color: #111;*/
+.bar {
+  display: inline-block;
+  height: 100%;
+}
+
+.container .bar {
+  background-image: repeating-linear-gradient(-45deg,
+      transparent,
+      transparent 4px,
+      rgba(30, 215, 96, 0.3) 4px,
+      rgba(30, 215, 96, 0.3) 8px);
 }
 
 .row {
   position: relative;
   width: 100%;
+  border-bottom: 2px solid #111;
 }
 
 .row [class^="col"] {
   float: left;
-  margin: 0.5rem 2%;
+  margin: 0 2%;
   min-height: 0.125rem;
 }
 
