Make styling white on black, add favicon

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,8 +13,8 @@ body {
   font-size: 17px;
   font-weight: normal;
   line-height: 1.35;
-  color: #1a1a1a;
-  background-color: #fff;
+  background-color: #191E1E;
+  color: #fff;
 }
 
 /* TYPOGRAPHY */
@@ -57,11 +57,6 @@ p {
   line-height: 1;
 }
 
-.header {
-  background-color: #fff;
-  color: #1a1a1a;
-}
-
 /* Details */
 
 details {
@@ -90,7 +85,7 @@ details div p {
 input:focus,
 summary:focus,
 button:focus {
-  outline: 4px solid #76D7C4;
+  outline: 4px solid #2fd566;
   outline-offset: 0;
 }
 
@@ -116,19 +111,20 @@ button {
 }
 
 input {
-  border: 2px solid #1a1a1a;
-  color: #1a1a1a;
+  border: 1px solid #fff;
+  color: #fff;
   padding: 5px;
   width: 50%;
+  background-color: #191E1E;
 }
 
 button {
-  background-color: #1a1a1a;
+  background-color: #fff;
   border: none;
   border-radius: 0;
-  color: #fff;
+  color: #191E1E;
   margin-left: -5px;
-  padding: 7px 20px;
+  padding: 6px 12px;
 }
 
 button:hover {
@@ -150,7 +146,7 @@ button:hover {
 }
 
 .spinner > div {
-  background-color: #1a1a1a;
+  background-color: #fff;
   height: 100%;
   width: 2px;
   display: inline-block;
@@ -193,13 +189,13 @@ button:hover {
   }
 }
 
-/* ==== GRID SYSTEM ==== */
+/* Grid system */
 
 .container {
-  width: 90%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
-  border-bottom: 2px solid #1a1a1a;
+  border-bottom: 1px solid #fff;
 }
 
 .container:last-of-type {
@@ -207,11 +203,11 @@ button:hover {
 }
 
 .container .bar {
-  background-color: #eaeaea;
+  background-color: rgba(255,255,255,0.18);
   display: inline-block;
   height: 100%;
   width: 0%;
-  transition: 3s ease-in-out;
+  transition: 3.5s ease-in-out;
 }
 
 .row {
@@ -298,13 +294,8 @@ button:hover {
   display: none;
 }
 
-@media only screen and (min-width: 33.75em) {  /* 540px */
-  .container {
-    width: 80%;
-  }
-}
-
 @media only screen and (min-width: 45em) {  /* 720px */
+
   .col-1 {
     width: 4.33%;
   }
@@ -359,9 +350,6 @@ button:hover {
 }
 
 @media only screen and (min-width: 60em) { /* 960px */
-  .container {
-    width: 100%;
-  }
 
   .row {
     margin: 0 auto;
